# nikodym

./: .gitattributes  .gitignore  AGENTS.md  AUTONOMY-LOG.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AUTONOMY.md  ESPECIFICACIONES.md  ROADMAP.md  normativa_cmf_parametros.md
docs/design/: 00-INDICE.md  01-core.md  02-data.md  03-audit-governance.md  04-tracking.md  05-convenciones-config.md  06-binning.md  07-selection.md  08-model.md  09-scorecard.md  10-calibration.md  11-performance-stability.md  12-ml.md  13-tuning.md  14-explain.md  15-provisioning-cmf.md  16-provisioning-ifrs9.md  17-provisioning-orchestration.md  18-survival.md  19-markov.md  20-forward.md  21-stress.md  22-validation.md  23-ui.md  24-testing.md  25-packaging-ci.md  26-report.md  27-eda.md  28-provisiones-end-to-end.md  _CONTRATOS-TRANSVERSALES.md  _PLANTILLA-SDD.md
docs_site/: api.md  concepts.md  getting-started.md  glosario.md  index.md  tutorial.md
docs_site/guias/: binning-seleccion.md  desempeno-estabilidad.md  modelo-calibracion.md
docs_site/overrides/: main.html
docs_site/stylesheets/: extra.css
scripts/: capture_demo_fixtures.py  capture_demo_fixtures_f1.py  capture_demo_fixtures_ifrs9.py  derive_ifrs9_preset.py  derive_provisiones_preset.py  gen_schema_fixture.py  smoke_instalacion_pip.py
src/nikodym/: __init__.py  api.py  methodology.py
src/nikodym/audit/: __init__.py  config.py  environment.py  exceptions.py  hashing.py  replay.py  sink.py
src/nikodym/binning/: __init__.py  config.py  exceptions.py  results.py  step.py  transformer.py
src/nikodym/calibration/: __init__.py  calibrator.py  config.py  exceptions.py  results.py  step.py
src/nikodym/core/: __init__.py  artifacts.py  audit.py  base.py  exceptions.py  lineage.py  mixins.py  registry.py  results.py  seeding.py  steps.py  study.py
src/nikodym/data/: __init__.py  card.py  config.py  hashing.py  loading.py  partition.py  schema.py  special.py  step.py  target.py
src/nikodym/eda/: __init__.py  card.py  config.py  default_rate.py  exceptions.py  figures.py  quality.py  stability.py  step.py  univariate.py
src/nikodym/explain/: __init__.py  config.py  engine.py  exceptions.py  explainers.py  reason_codes.py  results.py  step.py
src/nikodym/forward/: __init__.py  config.py  exceptions.py  macro.py  results.py  satellite.py  scenarios.py  step.py
src/nikodym/governance/: __init__.py  config.py  exceptions.py  inventory.py  model_card.py  scenarios.py
src/nikodym/markov/: __init__.py  config.py  exceptions.py  results.py  step.py  term_structure.py  transition.py
src/nikodym/ml/: __init__.py  backends.py  config.py  estimator.py  exceptions.py  results.py  step.py
src/nikodym/model/: __init__.py  config.py  estimator.py  exceptions.py  results.py  step.py
src/nikodym/performance/: __init__.py  config.py  evaluator.py  exceptions.py  results.py  step.py
src/nikodym/provisioning/: __init__.py  config.py  exceptions.py  orchestrator.py  results.py  step.py
src/nikodym/report/: __init__.py  _manifest.py  ai.py  builder.py  charts.py  config.py  document.py  docx.py  exceptions.py  exports.py  markdown.py  pdf.py  prose.py  renderer.py  results.py  step.py
src/nikodym/scorecard/: __init__.py  config.py  exceptions.py  results.py  scaler.py  step.py  transformer.py
src/nikodym/selection/: __init__.py  config.py  exceptions.py  results.py  selector.py  step.py
src/nikodym/stability/: __init__.py  config.py  evaluator.py  exceptions.py  results.py  step.py
src/nikodym/stress/: __init__.py  config.py  engine.py  exceptions.py  results.py  step.py
src/nikodym/survival/: __init__.py  base.py  config.py  cox_aft.py  discrete_hazard.py  exceptions.py  kaplan_meier.py  results.py  step.py
src/nikodym/testing/: __init__.py  estimator_checks.py  fixtures.py  regulatory.py  reproducibility.py  strategies.py
src/nikodym/tracking/: __init__.py  _registry.py  config.py  exceptions.py  inventory.py  recorder.py  sink.py
src/nikodym/tuning/: __init__.py  config.py  exceptions.py  optimizer.py  results.py  search_space.py  step.py
src/nikodym/ui/: __init__.py  datasets.py  exceptions.py  presets.py  reliability.py  routes.py  runs.py  serializers.py  server.py  settings.py
src/nikodym/utils/: __init__.py  optional.py
src/nikodym/validation/: __init__.py  backtesting.py  calibration_tests.py  config.py  discrimination.py  evaluator.py  exceptions.py  results.py  stability.py  step.py
tests/: conftest.py
tests/integration/: test_binning_pipeline.py  test_eda_pipeline.py  test_markov_pipeline.py  test_model_pipeline.py  test_selection_pipeline.py
tests/repro/: test_config_hash_golden.py  test_seeding_golden.py
tests/unit/: _ui_f1.py  test_api_assemble_run.py  test_api_run.py  test_artifacts.py  test_audit.py  test_audit_config.py  test_audit_environment_hashing.py  test_audit_sink_replay.py  test_base_mixins.py  test_binning_compatibility.py  test_binning_config.py  test_binning_results.py  test_binning_step.py  test_binning_transformer.py  test_calibration_calibrator.py  test_calibration_config.py  test_calibration_results.py  test_calibration_step.py  test_capture_demo_fixtures.py  test_cmf_engine.py  test_cmf_matrices.py  test_cmf_results.py  test_cmf_step.py  test_config_full_schema.py  test_config_hashing.py  test_config_loader.py  test_config_migration.py  test_config_public_api.py  test_config_schema.py  test_data_config.py  test_data_hashing.py  test_data_loading.py  test_data_partition.py  test_data_schema.py  test_data_special.py  test_data_step.py  test_data_target.py  test_eda_card.py  test_eda_config.py  test_eda_default_rate.py  (+128 more)
web/: .env.demo  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: AppHeader.tsx  AppSidebar.tsx  ConfigTab.tsx  DatosTab.tsx  EmptyState.tsx  FieldRenderer.tsx  FlowStepper.tsx  LandingLauncher.tsx  NikodymMark.tsx  ReporteTab.tsx  (+5 more)
(+106 files in other folders)
