# ─────────────────────────── build backend ───────────────────────────
[build-system]
requires = ["hatchling>=1.27"]              # ≥1.27: emite core-metadata 2.4 (License-Expression) y
                                            # soporta license-files como globs (PEP 639 final). SDD-25 §5/C15.
build-backend = "hatchling.build"

# ─────────────────────────── metadata (PEP 621) ──────────────────────
[project]
name = "nikodym"
description = "Librería de riesgo de crédito: scoring, ML, provisiones CMF e IFRS 9/ECL, forward-looking y stress testing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"                      # SPDX (PEP 639); LICENSE en la raíz
license-files = ["LICENSE"]
authors = [{ name = "Nikodym", email = "admin@nxlabs.cl" }]
keywords = ["credit-risk", "ifrs9", "ecl", "cmf", "scorecard", "provisioning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]                       # ver [tool.hatch.version]

# Núcleo BASE: se instala SIEMPRE con `pip install nikodym`. Solo deps permisivas y livianas.
dependencies = [
  "pydantic>=2.5",        # config, LineageBundle, AuditEvent (MIT)
  "numpy>=1.22",          # SeedSequence/Generator (BSD)
  "pandas>=2.0",          # DataFrame, contrato de I/O universal (BSD) — SDD-05 §6
  "pandera>=0.24",        # validación de esquema tabular (MIT) — dep base de data (SDD-02 §10).
                          # PISO 0.24: desde v0.24 hay que `import pandera.pandas` (el top-level emite
                          # FutureWarning → con filterwarnings=error rompería tests). Desviación de SDD-02
                          # (que fijó >=0.20) a ratificar al revisar el SDD.
  "pyarrow>=14",          # lectura Parquet (Apache-2.0) — dep base de data (SDD-02 §10). PISO 14 (no 12):
                          # rango realmente probado con pandas 2.x. Desviación de SDD-02 a ratificar.
  "joblib>=1.3",          # persistencia de artefactos (BSD)
  "jinja2>=3.1",          # BSD-3 — HTML básico determinístico del reporte (ruta primaria F1);
                          # import perezoso en report.renderer.
  "PyYAML>=6.0",          # round-trip YAML legible (MIT)
]

[project.urls]
Homepage = "https://github.com/nexolabs-gh/nikodym"
Source = "https://github.com/nexolabs-gh/nikodym"
Documentation = "https://github.com/nexolabs-gh/nikodym#readme"
Changelog = "https://github.com/nexolabs-gh/nikodym/blob/main/CHANGELOG.md"

# ───────────────── EXTRAS de USUARIO (se redistribuyen en el wheel) ───────────────
[project.optional-dependencies]
# MVP scorecard (F1). sklearn>=1.6 OBLIGATORIO: check_estimator/tags (D-CONV-4).
scoring = [
  "optbinning>=0.19",     # Apache-2.0 — binning/WoE/monotonía
  "statsmodels>=0.14",    # BSD — inferencia/stepwise/p-values
  "scikit-learn>=1.6",    # BSD — pipeline/check_estimator; PISO 1.6 (regla dura)
  "scipy>=1.10",          # BSD — arrastrado por statsmodels/sklearn, explícito
]
# Backends ML (F2). Cada GBDT es un extra independiente (instalación selectiva).
xgboost  = ["xgboost>=2.0",  "scikit-learn>=1.6"]   # Apache-2.0
lightgbm = ["lightgbm>=4.0", "scikit-learn>=1.6"]   # MIT
catboost = ["catboost>=1.2", "scikit-learn>=1.6"]   # Apache-2.0
tuning   = ["optuna>=3.5"]                          # MIT
explain = [                 # MIT / PSF / BSD
  "shap>=0.44",
  "matplotlib>=3.7",
  "numba>=0.60",            # constraint explícito: evita llvmlite viejo incompatible con Py 3.12
  "llvmlite>=0.43",
]
# Forward-looking (F5).
forecasting = ["statsmodels>=0.14", "pmdarima>=2.0"]  # BSD / MIT
survival    = ["lifelines>=0.28"]                     # MIT — NO scikit-survival (GPL-3.0)
# Infraestructura opcional.
tracking = ["mlflow>=2.10"]                # Apache-2.0 (runs/registry, SDD-04)
ui       = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "nikodym[excel]"]   # MIT / BSD-3 / Apache-2.0 (backend REST de la UI, SDD-23); multipart = uploads UploadFile; trae [excel] para la pestaña Datos
sweep    = ["hydra-core>=1.3", "omegaconf>=2.3"]   # MIT / BSD-3 (barridos CLI)
polars   = ["polars>=0.20"]                # MIT — backend de carga opcional de data
excel    = ["openpyxl>=3.1"]               # MIT — lectura .xlsx (DataLoader), import perezoso
report   = ["matplotlib>=3.7"]       # PSF/BSD-compat — figuras opcionales, imports perezosos
# PDF — extra SEPARADO, NO entra al meta-extra `all`: WeasyPrint arrastra Pyphen (tri-licencia con GPL)
# y el gate "Verify runtime licenses" del CI rechaza cualquier GPL/LGPL/AGPL en el cierre redistribuible.
pdf      = ["weasyprint>=63"]              # BSD-3 — render HTML→PDF opcional (deps nativas Pango/HarfBuzz)
# Word — export .docx del informe (la base editable que Validación realmente edita). A DIFERENCIA de
# `pdf`, este SÍ entra en `all`: python-docx es MIT puro (y su única transitiva, lxml, es BSD-3), así
# que no contamina el cierre redistribuible ni activa el gate anti-copyleft.
docx     = ["python-docx>=1.1"]            # MIT — export Word opcional, import perezoso
ai       = ["anthropic>=0.40"]             # MIT — narrativa IA opcional, import perezoso
# SVM/RF nativos de sklearn (SDD-12): solo requieren scikit-learn>=1.6.
ml       = ["scikit-learn>=1.6"]           # BSD — modelos sklearn-native (SVM/RandomForest)
# Meta-extra: TODO lo redistribuible. Excluye copyleft (scikit-survival GPL-3.0).
all = [
  "nikodym[scoring]", "nikodym[ml]", "nikodym[xgboost]", "nikodym[lightgbm]", "nikodym[catboost]",
  "nikodym[tuning]", "nikodym[explain]", "nikodym[forecasting]", "nikodym[survival]",
  "nikodym[tracking]", "nikodym[ui]", "nikodym[sweep]", "nikodym[polars]",
  "nikodym[excel]", "nikodym[report]", "nikodym[docx]", "nikodym[ai]",
]

# ───────────── GRUPOS de DESARROLLO (PEP 735 — NO se redistribuyen) ─────────────
[dependency-groups]
test = [
  "pytest>=8.1",
  "pytest-cov>=5.0,<6.0",  # DEV-ONLY: pytest-cov 6/7 recarga NumPy 2.4 al arrancar coverage
  "coverage[toml]<7.10",   # DEV-ONLY: par probado con pytest-cov 5 y filterwarnings=error
  "hypothesis>=6.100",     # MPL-2.0 (copyleft DÉBIL) — DEV-ONLY, nunca en el wheel
  "optbinning>=0.19",      # DEV-ONLY: la suite F1 ejerce scoring real
  "statsmodels>=0.14",     # DEV-ONLY: logística/VIF reales en tests de model/selection
  "lifelines>=0.28",       # DEV-ONLY: la suite de survival ejerce Cox/AFT reales en tests
  "scikit-learn>=1.6,<1.8",# DEV-ONLY: clone/check_estimator; mismo techo operativo que tool.uv
  "scipy>=1.10",           # DEV-ONLY: dependencia numérica explícita de scoring
  "httpx2>=2.5",           # DEV-ONLY: cliente HTTP de starlette.testclient (TestClient) para los
                           # tests de endpoints FastAPI de la UI; NO va al wheel. Starlette deprecó
                           # httpx en favor de httpx2; sin él, filterwarnings=error tumba la colección.
  "pypdf>=5",              # DEV-ONLY: extracción de texto del PDF en tests (extra pdf); NO va al wheel
]
lint = [
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML>=6.0",     # stubs de PyYAML para mypy --strict (DEV-ONLY, nunca en el wheel)
  "pandas-stubs>=2.0",
]
docs = [
  "mkdocs-material>=9.5",     # sitio de documentación de la librería (theme material)
  "mkdocstrings[python]>=0.24",  # referencia de la API pública desde docstrings (handler python/griffe)
  # Quarto (binario externo del reporte de modelos) NO es dep pip.
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "docs" },
  "pre-commit>=3.7",
]

# ─────────────────────────── hatchling (build) ───────────────────────────
[tool.hatch.version]
path = "src/nikodym/__init__.py"           # __version__ = "x.y.z" (fuente única del SemVer)

[tool.hatch.build.targets.wheel]
packages = ["src/nikodym"]                 # SOLO el paquete; tests/docs NO entran al wheel
exclude = ["*.parquet", "*.csv"]           # defensa en profundidad: ningún dato en el wheel

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/CHANGELOG.md", "/LICENSE", "/README.md"]
exclude = ["/.github", "/docs", "/.venv", "*.parquet", "*.csv"]   # nunca datos en el sdist

# ─────────────────────────── uv (lock/resolución) ───────────────────────────
[tool.uv]
required-version = ">=0.5"
default-groups = ["dev"]    # qué grupos sincroniza `uv sync` sin flags (dev incluye test/lint/docs).
                            # Entorno limpio sin grupos: `uv sync --no-default-groups`.
# `ortools` llega solo como transitiva de `optbinning` en el extra `scoring`; este constraint
# acota la resolución al primer tramo con wheels cp313 sin convertirla en dependencia directa de Nikodym.
# No usamos override: si una versión upstream fija un techo, uv debe elegir otra versión compatible
# dentro de nuestro rango declarado en vez de reemplazar metadata de terceros.
# `optbinning 0.20.0` llama `sklearn.utils.check_array(force_all_finite=...)`; sklearn 1.6/1.7
# lo mantiene con FutureWarning, pero 1.8 lo elimina. El techo es reversible cuando OptBinning publique
# una versión que use `ensure_all_finite` y no fije `ortools<9.12`.
constraint-dependencies = ["ortools>=9.12", "scikit-learn<1.8"]

# ─────────────────────────── ruff / mypy / pytest ───────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "D"]   # D = docstrings (en español)
[tool.ruff.lint.pydocstyle]
convention = "numpy"
[tool.ruff.lint.per-file-ignores]
# Los tests no exigen docstrings por función (convención de SDD-24; el contenido es el contrato).
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.12"                      # 3.12 (no 3.11) por los stubs de numpy 2.x: usan PEP 695
                                            # (`type X = ...`), que mypy solo parsea con target ≥3.12. El
                                            # runtime 3.11 lo cubre la matriz de tests. Desviación de SDD-25
                                            # (que fijó 3.11) a ratificar al revisar el SDD.
mypy_path = "src"                           # src/ layout: encuentra el paquete sin requerir install
packages = ["nikodym"]
strict = true                               # STRICT por defecto en TODO el paquete (ESPEC §10, §12).
[[tool.mypy.overrides]]
# Toda lib de terceros sin stubs de tipos que el paquete importe (base o extras).
module = [
  "optbinning.*", "lifelines.*", "pmdarima.*", "shap.*", "catboost.*",
  "xgboost.*", "lightgbm.*", "statsmodels.*", "scipy.*",
  "mlflow.*", "hydra.*", "omegaconf.*", "pandera.*",
  "pyarrow.*", "polars.*", "joblib.*", "weasyprint.*",
  # python-docx SÍ trae `py.typed`: cuando el extra `docx` está instalado, mypy usa sus tipos reales.
  # Está aquí sólo para que el job Quality del CI (que instala `--group lint --extra ui`, sin `docx`)
  # no falle por el import perezoso de `nikodym.report.docx`. Mismo caso que `weasyprint`.
  "docx.*",
]
ignore_missing_imports = true               # libs sin stubs; relajar SOLO el import, no el strict del código propio

# ── [tool.pytest.ini_options] y [tool.coverage.*]: contenido transcrito de SDD-24 (dueño), copiado por SDD-25 §5 ──
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config -ra"
testpaths = ["tests"]
markers = [
  "slow: test lento, excluible en el loop rápido",
  "requires_xgboost: requiere el extra [xgboost]",
  "requires_lightgbm: requiere el extra [lightgbm]",
  "requires_catboost: requiere el extra [catboost]",
  "requires_forecasting: requiere el extra [forecasting]",
  "requires_explain: requiere el extra [explain]",
  "gbdt_nondeterministic: reproducibilidad no garantizada (GBDT multihilo)",
]
filterwarnings = [
  "error",   # D-TEST-1 de SDD-24: un warning no manejado FALLA el test (regulatorio)
  # Deprecación PENDIENTE de matplotlib de la familia ``set_bad``/``set_over``/``set_under``
  # (→ ``cmap.with_extremes``), disparada por libs de terceros (shap/matplotlib) al importar el
  # stack de explain con el extra [ml]; no es código nuestro y es benigna. En arm64/macOS local
  # no aparece; en el job all-extras (Linux) sí. Acotada por mensaje+categoría para no enmascarar
  # otros warnings.
  "ignore:The set_(bad|over|under) function will be deprecated:PendingDeprecationWarning",
  # Degradación CON GRACIA del reporte, que es comportamiento esperado y no un defecto: el preset
  # estándar pide los cuatro entregables (HTML/PDF/.qmd/.docx), y los jobs que instalan sin los
  # extras `pdf`/`docx` emiten estos avisos al no poder producirlos. Con `filterwarnings=error` un
  # aviso esperado tumbaría cualquier test que corra el preset, aunque no vaya del PDF.
  # Acotados por mensaje+categoría para no enmascarar otros RuntimeWarning. La degradación sigue
  # verificada explícitamente en tests/unit/test_report_pdf.py (con `pytest.warns`, que atrapa el
  # aviso pese a este filtro) y su ausencia sería un fallo real allí.
  "ignore:WeasyPrint no está disponible:RuntimeWarning",
  "ignore:python-docx no está disponible:RuntimeWarning",
]

[tool.coverage.run]
source = ["nikodym"]
branch = true
[tool.coverage.report]
fail_under = 90              # gate GLOBAL (SDD-24 §11). El 100% por-módulo se cabla en un job aparte (CI).
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "^\\s*\\.\\.\\.\\s*$"]
